--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,1 @@
-# Object files
-*.o
-
-# Libraries
-*.a
-*.la
-*.lo
-
-# Executables
-toxirc
-
-# Tox save file
-*.tox
-
-# Settings
-settings.ini
-
-# Editors
-GTAGS
-GPATH
-GRTAGS
-*~
-*.swp
+.localrun
