--- a/Makefile_win
+++ b/Makefile_win
@@ -1,19 +1,25 @@
-CC = gcc
-CFLAGS = -Wall -Wextra -std=gnu99 $(shell pkg-config --cflags libtoxcore) -g -O0 -fstack-protector-all -fPIC -Wno-unused-function -Wno-unused-variable -Wno-unused-function -Wno-unused-parameter -Wno-unused-value
-
-LDFLAGS = $(shell pkg-config --libs libtoxcore) -g -O0 -fstack-protector-all -fPIC
+CC = x86_64-w64-mingw32-gcc
+CFLAGS = -Wall -Wextra -std=gnu99 $(wildcard /tmp/static_prefix/lib/*.a)
+LDFLAGS = $(wildcard /tmp/static_prefix/lib/*.a)
 
 SRC = $(wildcard src/*.c ) $(wildcard src/*/*.c) third-party/minini/dev/minIni.c
 OBJ = $(SRC:.c=.o)
 HEADERS = $(wildcard src/*.h) $(wildcard src/*/*.h)
 
+DEBUG = 0
 PREFIX = /usr/local
 EXECUTABLE = toxirc
+
+ifeq ($(DEBUG), 1)
+	CFLAGS += -g
+endif
+
+CFLAGS += -I /tmp/static_prefix/include -D__USE_MINGW_ANSI_STDIO=1
 
 all: $(SRC) $(EXECUTABLE)
 
 $(EXECUTABLE): $(OBJ) $(HEADERS)
-	$(CC) $(OBJ) $(LDFLAGS) -o $(EXECUTABLE) -l:libsodium.a
+	$(CC) $(OBJ) $(LDFLAGS) -o $(EXECUTABLE) -lwsock32 -lws2_32 -lpthread -static-libgcc -liphlpapi -L /root/prefix/x86_64/lib -lsodium -lssp
 
 .o:
 	$(CC) $(CFLAGS) -c $< -o $@
@@ -26,5 +32,9 @@ rebuild: clean all
 install: all
 	@echo "Installing binary..."
 	install -m 0755 $(EXECUTABLE) $(PREFIX)/bin/$(EXECUTABLE)
+
+deps:
+	@git submodule init
+	@git submodule update
 
 .PHONY: all clean
